Add Request with attachments methods